--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <header>
     <div class="logo-titulo">
-      <img src="https://via.placeholder.com/60" alt="Logo do site" />
-      <h1>nosso agro realiza</h1>
+      <img src="img/logo.png" alt="Logo do site" />
+      <h1>agro-projeto</h1>
     </div>
     <nav>
       <ul class="menu">
@@ -28,7 +28,7 @@
   </section>
 
   <section class="banner-principal">
-    <img src="logo.png" alt="Banner principal" />
+    <img src="img/logo.principal.jpg" alt="Banner principal" />
   </section>
 
   <section class="conteudo invertido">
